fixing layout issue on mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,5 +42,6 @@
   .ui.stackable.buttons > .button{
     width: 100%;
     margin-bottom: 0.4em;
+    border-radius: 0.28571429rem;
   }
 }
